--- a/app/views/users/doctors.html.erb
+++ b/app/views/users/doctors.html.erb
@@ -19,7 +19,7 @@
         <div class="card border-0 doctor-card mb-5">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
-                    <span class="card-title font-weight-bold text-dark">Doctors(<%=@all_active_users_count = User.where(activated:true, admin:false ).length%>)</span>
+                    <span class="card-title font-weight-bold text-dark">Doctors <%=@all_active_users_count = User.where(activated:true, admin:false ).length%></span>
                     <img src="https://img.icons8.com/cotton/64/000000/doctors-bag--v1.png" class="download-icon"/>
                 </div>
                 <table class="table table-borderless">
@@ -28,7 +28,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Names</th>
                         <th scope="col">Email</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">Action</th>
                         </tr>
                     </thead>
                     <% count = 0%>
@@ -41,7 +41,7 @@
                                     <td>Dr.<%= doctor.username %></td>
                                     <td><%= doctor.email %></td>
                                     <td>
-                                        <%= link_to "Chat",  conversations_path(sender_id: current_user.id, recipient_id: doctor.id), method: :post , class:"btn doctor-btn-pill text-light"%>
+                                        <%= link_to "talk to",  conversations_path(sender_id: current_user.id, recipient_id: doctor.id), method: :post , class:"text-success"%>
                                     </td>
                                 <%end%>
                             </tr>
