--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,15 +19,18 @@
             </ul>
         </div>
     </nav>
-    <div class="bg-white container mt-2">
-        <div class="container d-flex justify-content-center">
-            <div class="mt-3 mb-3">
+    <div class="container mt-2">
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            <div>
                 <p class="h5 text-dark">Welcome, Dr. <%= current_user.username %>!</p>
                 <p class="text-secondary">Thank you for your help in these hard times that we are passing through</p>
                 <%if @all_symptoms_count == 0 %>
                     <p class="text-secondary">By the way, there are no registered symptoms now, care to be the first to register the first one???? click <%= link_to('Register', new_symptom_path, class:"h5 text-dark") %> </p>
                 <%end%>
             </div>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     </div>
     <div class="container-fluid mt-5 pb-5">
@@ -210,7 +213,7 @@
                 <%end%>
             </div>
             <%if @all_symptoms_count != 0%>
-                <p class="font-weight-bold mt-5 mb-5">Symptoms</p>
+                <p class="mt-5 mb-2">Symptoms</p>
                 <div class="card border-0 doctor-card p-2">
                     <div class="card-body">
                         <div class="d-flex justify-content-between">
