--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -61,6 +61,7 @@
     box-shadow: 0px 13px 28px -26px rgba(54,48,98,1);
     transition: all 0.9s;
     border-radius: 15px!important;
+    width: 13rem!important
 }
 .essential-card:hover{
     -webkit-box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
@@ -136,7 +137,7 @@
 }
 
 .card-columns{
-    column-count: 2!important;
+    column-count: 5!important;
 }
 
 .card-bg-light{
@@ -193,6 +194,7 @@
 
 .conversation-card{
     border-radius: 25px;
+    padding: 10px;
 }
 
 .screening-page{
@@ -363,6 +365,7 @@
 .search-form{
   background-color: #f0f0f0;
   border-radius: 5px;
+  width: 220px
 }
 
 .search-form-input{
