edited mailer for when the account is activated

--- a/app/views/user_notifier_mailer/send_activated_email.html.erb
+++ b/app/views/user_notifier_mailer/send_activated_email.html.erb
@@ -1,3 +1,7 @@
 <h1>Thanks for signing up, <%= @user.username %>!</h1>
-    <p>Thanks for joining and have a great day! Now sign in and do
+
+<p class="h6">your account has been activated</p>
+<img src="/images/undraw_check_boxes_m3d0.png" style="width:36rem">
+<p>Thanks for joining and have a great day! Now sign in and do
 awesome things!</p>
+<a href="http://54.147.178.150/users" class="btn btn-primary mt-1">Signin</a>
