changed where a link from email points to

--- a/app/views/user_notifier_mailer/send_activated_email.html.erb
+++ b/app/views/user_notifier_mailer/send_activated_email.html.erb
@@ -4,4 +4,4 @@
 <img src="/images/undraw_check_boxes_m3d0.png" style="width:36rem">
 <p>Thanks for joining and have a great day! Now sign in and do
 awesome things!</p>
-<a href="http://54.147.178.150/users" class="btn btn-primary mt-1">Signin</a>
+<a href="https://nameless-hollows-99756.herokuapp.com/users" class="btn btn-primary mt-1">Signin</a>
