--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -20,6 +20,9 @@
         <% end %>
 
         <%= render "devise/shared/links" %>
+        <div class="mt-2">
+          <%= link_to 'back', :back, class:"btn btn-outline-dark"%>
+        </div>
       </div>
     </div>
     <div class="col-7 login-page d-flex justify-content-center align-items-center">
